--- a/Proyecto CV/estilos_cv.css
+++ b/Proyecto CV/estilos_cv.css
@@ -5,4 +5,4 @@ section img {
 
 section { text-align: left;}
 form { color:rgb(32, 0, 0);background-color:rgb(87, 100, 95);} 
-h1 { font-size: 200%;}
+h1 { font-size: 200%;color: rgb(5, 5, 65);}
